tests/ui/rust-2024/unsafe-extern-blocks/extern-items.edition2024.stderr
error: extern blocks should be unsafe
  --> $DIR/extern-items.rs:9:1
   |
LL | / extern "C" {
LL | |
LL | |     static TEST1: i32;
LL | |     fn test1(i: i32);
LL | | }
   | |_^
   |
   = note: `#[deny(missing_unsafe_on_extern)]` on by default

error: aborting due to 1 previous error

